main/default/objects/Survey_Answer__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <formula>Survey_Response__r.Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event</label>
    <type>Text</type>
</CustomField>