main/default/objects/Survey_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>