main/default/objects/Survey_Answer__c/fields/Question_Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Sorting_Order__c</fullName>
    <formula>Survey_Question__r.Sorting_Order__c</formula>
    <label>Question Sorting Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>