main/default/objects/Survey_Answer__c/fields/Report_Answer__c.field-meta.xml
<CustomField>
    <fullName>Report_Answer__c</fullName>
    <label>Report Answer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>